fixed title scroller on firefox

--- a/web/sass/style.scss
+++ b/web/sass/style.scss
@@ -119,7 +119,7 @@ header {
         margin: 0;
         padding: 10px 0;
         box-sizing: border-box;
-        display: flex;
+        display: table;
         height: inherit;
         color: $color-main;
     }
